[package]
name = "ob_serve"
version = "0.1.0"
edition = "2024"

[dependencies]
axum       = "0.7"
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
arrow      = { version = "58", features = ["ipc"] }
tower-http = { version = "0.5", features = ["cors"] }
http = "1.4.0"
